--- a/RefereezyApp/app/src/main/res/layout/activity_profile.xml
+++ b/RefereezyApp/app/src/main/res/layout/activity_profile.xml
@@ -40,6 +40,7 @@
             android:layout_gravity="center_vertical|end"
             android:layout_width="50dp"
             android:layout_height="50dp"
+            android:src="@drawable/ic_football"
             android:background="@color/transparent"/>
 
     </FrameLayout>
