--- a/RefereezyApp/app/src/main/res/values/colors.xml
+++ b/RefereezyApp/app/src/main/res/values/colors.xml
@@ -3,4 +3,5 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="transparent">#00000000</color>
+    <color name="cardBackground">#181818</color>
 </resources>
