--- a/RefereezyApp/app/src/main/res/values/styles.xml
+++ b/RefereezyApp/app/src/main/res/values/styles.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <style name="Match.Info.Title">
+    <style name="MatchInfoTitle">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_marginStart">50dp</item>
@@ -11,7 +11,7 @@
         <item name="android:text">{DAY}</item>
     </style>
 
-    <style name="Account.TextField">
+    <style name="AppTextField">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">40dp</item>
         <item name="android:gravity">center_vertical</item>
@@ -19,7 +19,7 @@
         <item name="android:background">@drawable/rounded_background</item>
         <item name="android:textColor">@color/black</item>
         <item name="android:layout_marginVertical">10dp</item>
-
     </style>
+
 
 </resources>
