Added UI for app
Todo implementation for each activity

Manage fake but compatible data between activities

--- a/APPS/movil/RefereezyApp/app/src/main/res/layout/activity_incidence.xml
+++ b/APPS/movil/RefereezyApp/app/src/main/res/layout/activity_incidence.xml
@@ -5,18 +5,14 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ActionsActivity">
+    tools:context=".IncidenceActivity">
+
 
     <TextView
         android:id="@+id/timer"
-        app:layout_constraintTop_toTopOf="parent"
         android:layout_width="match_parent"
-        android:layout_height="100dp"
-        android:text="84:00"
-        android:gravity="center_horizontal"
-        android:fontFamily="@font/k2d_medium"
-        android:textStyle="bold"
-        android:textSize="64sp"/>
+        app:layout_constraintTop_toTopOf="parent"
+        style="@style/TimerTextStyle"/>
 
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/scoreboard"
@@ -39,25 +35,25 @@
         android:layout_height="wrap_content">
 
         <ImageButton
-            android:id="@+id/cardsBtn"
+            android:id="@+id/lesionBtn"
             android:layout_width="0dp"
             android:layout_weight="1"
             android:layout_marginEnd="60dp"
             android:layout_height="70dp"
             android:background="@drawable/action_background"
-            android:padding="12dp"
+            android:padding="8dp"
             android:scaleType="fitCenter"
-            android:src="@drawable/ic_cards" />
+            android:src="@drawable/ic_lesion" />
 
         <ImageButton
-            android:id="@+id/pauseBtn"
+            android:id="@+id/fightBtn"
             android:layout_width="0dp"
             android:layout_weight="1"
             android:layout_height="70dp"
             android:background="@drawable/action_background"
-            android:padding="5dp"
+            android:padding="8dp"
             android:scaleType="fitCenter"
-            android:src="@android:drawable/ic_media_play" />
+            android:src="@drawable/ic_fight" />
 
 
     </LinearLayout>
@@ -73,30 +69,21 @@
         android:layout_height="wrap_content">
 
         <ImageButton
-            android:id="@+id/goalBtn"
+            android:id="@+id/suspendBtn"
             android:layout_width="0dp"
             android:layout_weight="1"
             android:layout_height="70dp"
-            android:layout_marginEnd="60dp"
+            android:layout_marginHorizontal="150dp"
             android:background="@drawable/action_background"
             android:padding="12dp"
             android:scaleType="fitCenter"
-            android:src="@drawable/gol" />
+            android:src="@drawable/ic_suspend" />
 
-        <ImageButton
-            android:id="@+id/warningBtn"
-            android:layout_width="0dp"
-            android:layout_weight="1"
-            android:layout_height="70dp"
-            android:background="@drawable/action_background"
-            android:padding="5dp"
-            android:scaleType="fitCenter"
-            android:src="@drawable/advertencia" />
+
+
 
     </LinearLayout>
 
-
-    
     <ImageButton
         android:layout_margin="15dp"
         app:layout_constraintTop_toTopOf="parent"
