--- a/APPS/movil/RefereezyApp/app/src/main/res/layout/activity_card_pick.xml
+++ b/APPS/movil/RefereezyApp/app/src/main/res/layout/activity_card_pick.xml
@@ -5,18 +5,13 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ActionsActivity">
+    tools:context=".CardPickActivity">
 
     <TextView
         android:id="@+id/timer"
-        app:layout_constraintTop_toTopOf="parent"
         android:layout_width="match_parent"
-        android:layout_height="100dp"
-        android:text="84:00"
-        android:gravity="center_horizontal"
-        android:fontFamily="@font/k2d_medium"
-        android:textStyle="bold"
-        android:textSize="64sp"/>
+        app:layout_constraintTop_toTopOf="parent"
+        style="@style/TimerTextStyle"/>
 
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/scoreboard"
@@ -29,8 +24,8 @@
         app:layout_constraintTop_toBottomOf="@id/timer"/>
 
     <LinearLayout
-        android:layout_marginTop="15dp"
         app:layout_constraintTop_toBottomOf="@id/scoreboard"
+        android:layout_marginTop="40dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:orientation="horizontal"
@@ -39,64 +34,29 @@
         android:layout_height="wrap_content">
 
         <ImageButton
-            android:id="@+id/cardsBtn"
+            android:id="@+id/yellowCardBtn"
             android:layout_width="0dp"
             android:layout_weight="1"
             android:layout_marginEnd="60dp"
             android:layout_height="70dp"
             android:background="@drawable/action_background"
-            android:padding="12dp"
+            android:padding="5dp"
             android:scaleType="fitCenter"
-            android:src="@drawable/ic_cards" />
+            android:src="@drawable/t_amarilla" />
 
         <ImageButton
-            android:id="@+id/pauseBtn"
+            android:id="@+id/redCardBtn"
             android:layout_width="0dp"
             android:layout_weight="1"
             android:layout_height="70dp"
             android:background="@drawable/action_background"
             android:padding="5dp"
             android:scaleType="fitCenter"
-            android:src="@android:drawable/ic_media_play" />
+            android:src="@drawable/t_roja" />
 
 
     </LinearLayout>
 
-    <LinearLayout
-        android:layout_marginTop="100dp"
-        app:layout_constraintTop_toBottomOf="@id/scoreboard"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:orientation="horizontal"
-        android:layout_width="600dp"
-        android:gravity="center"
-        android:layout_height="wrap_content">
-
-        <ImageButton
-            android:id="@+id/goalBtn"
-            android:layout_width="0dp"
-            android:layout_weight="1"
-            android:layout_height="70dp"
-            android:layout_marginEnd="60dp"
-            android:background="@drawable/action_background"
-            android:padding="12dp"
-            android:scaleType="fitCenter"
-            android:src="@drawable/gol" />
-
-        <ImageButton
-            android:id="@+id/warningBtn"
-            android:layout_width="0dp"
-            android:layout_weight="1"
-            android:layout_height="70dp"
-            android:background="@drawable/action_background"
-            android:padding="5dp"
-            android:scaleType="fitCenter"
-            android:src="@drawable/advertencia" />
-
-    </LinearLayout>
-
-
-    
     <ImageButton
         android:layout_margin="15dp"
         app:layout_constraintTop_toTopOf="parent"
