--- a/APPS/movil/RefereezyApp/app/src/main/res/values/colors.xml
+++ b/APPS/movil/RefereezyApp/app/src/main/res/values/colors.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="transparent">#00000000</color>
     <color name="cardBackground">#181818</color>
+    <color tools:overrid="true" name="m3_dark_default_color_secondary_text" >@color/white</color>
 
 
 
