--- a/APPS/reloj/RellotgeJAIS/app/src/main/res/layout/activity_local_players.xml
+++ b/APPS/reloj/RellotgeJAIS/app/src/main/res/layout/activity_local_players.xml
@@ -35,32 +35,29 @@
         app:layout_constraintEnd_toEndOf="parent"/>
 
     <!-- ScrollView para desplazamiento en ambas direcciones -->
-    <androidx.core.widget.NestedScrollView
+    <ScrollView
         android:layout_width="match_parent"
+        android:layout_marginTop="8dp"
         android:layout_height="0dp"
         app:layout_constraintTop_toBottomOf="@id/scoreboard"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:fillViewport="true">
+        app:layout_constraintBottom_toBottomOf="parent">
 
-        <HorizontalScrollView
+        <GridLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:paddingTop="12dp">
-
-            <GridLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:columnCount="4"
-                android:paddingHorizontal="100dp"
-                android:paddingVertical="40dp"
-                android:rowCount="4">
+            android:columnCount="3"
+            android:paddingTop="10dp"
+            android:paddingBottom="50dp"
+            android:rowCount="4"
+            android:layout_gravity="center_horizontal"
+            >
 
                 <!-- Ejemplo de LinearLayout con TextView -->
                 <LinearLayout
-                    android:layout_width="40dp"
-                    android:layout_height="40dp"
+                    android:layout_width="60dp"
+                    android:layout_height="60dp"
                     android:layout_margin="6dp"
                     android:background="@drawable/golkeeper"
                     android:gravity="center">
@@ -75,8 +72,8 @@
 
                 <!-- Repite este patrón para cada ImageButton -->
                 <LinearLayout
-                    android:layout_width="40dp"
-                    android:layout_height="40dp"
+                    android:layout_width="60dp"
+                    android:layout_height="60dp"
                     android:layout_margin="6dp"
                     android:background="@drawable/red_player"
                     android:gravity="center">
@@ -90,8 +87,8 @@
                 </LinearLayout>
 
                 <LinearLayout
-                    android:layout_width="40dp"
-                    android:layout_height="40dp"
+                    android:layout_width="60dp"
+                    android:layout_height="60dp"
                     android:layout_margin="6dp"
                     android:background="@drawable/red_player"
                     android:gravity="center">
@@ -105,8 +102,8 @@
                 </LinearLayout>
 
                 <LinearLayout
-                    android:layout_width="40dp"
-                    android:layout_height="40dp"
+                    android:layout_width="60dp"
+                    android:layout_height="60dp"
                     android:layout_margin="6dp"
                     android:background="@drawable/red_player"
                     android:gravity="center">
@@ -120,8 +117,8 @@
                 </LinearLayout>
 
                 <LinearLayout
-                    android:layout_width="40dp"
-                    android:layout_height="40dp"
+                    android:layout_width="60dp"
+                    android:layout_height="60dp"
                     android:layout_margin="6dp"
                     android:background="@drawable/red_player"
                     android:gravity="center">
@@ -135,8 +132,8 @@
                 </LinearLayout>
 
                 <LinearLayout
-                    android:layout_width="40dp"
-                    android:layout_height="40dp"
+                    android:layout_width="60dp"
+                    android:layout_height="60dp"
                     android:layout_margin="6dp"
                     android:background="@drawable/red_player"
                     android:gravity="center">
@@ -150,8 +147,8 @@
                 </LinearLayout>
 
                 <LinearLayout
-                    android:layout_width="40dp"
-                    android:layout_height="40dp"
+                    android:layout_width="60dp"
+                    android:layout_height="60dp"
                     android:layout_margin="6dp"
                     android:background="@drawable/red_player"
                     android:gravity="center">
@@ -165,8 +162,8 @@
                 </LinearLayout>
 
                 <LinearLayout
-                    android:layout_width="40dp"
-                    android:layout_height="40dp"
+                    android:layout_width="60dp"
+                    android:layout_height="60dp"
                     android:layout_margin="6dp"
                     android:background="@drawable/red_player"
                     android:gravity="center">
@@ -180,8 +177,8 @@
                 </LinearLayout>
 
                 <LinearLayout
-                    android:layout_width="40dp"
-                    android:layout_height="40dp"
+                    android:layout_width="60dp"
+                    android:layout_height="60dp"
                     android:layout_margin="6dp"
                     android:background="@drawable/red_player"
                     android:gravity="center">
@@ -195,8 +192,8 @@
                 </LinearLayout>
 
                 <LinearLayout
-                    android:layout_width="40dp"
-                    android:layout_height="40dp"
+                    android:layout_width="60dp"
+                    android:layout_height="60dp"
                     android:layout_margin="6dp"
                     android:background="@drawable/red_player"
                     android:gravity="center">
@@ -210,8 +207,8 @@
                 </LinearLayout>
 
                 <LinearLayout
-                    android:layout_width="40dp"
-                    android:layout_height="40dp"
+                    android:layout_width="60dp"
+                    android:layout_height="60dp"
                     android:layout_margin="6dp"
                     android:background="@drawable/red_player"
                     android:gravity="center">
@@ -226,8 +223,8 @@
                 </LinearLayout>
 
                 <LinearLayout
-                    android:layout_width="40dp"
-                    android:layout_height="40dp"
+                    android:layout_width="60dp"
+                    android:layout_height="60dp"
                     android:layout_margin="6dp"
                     android:background="@drawable/red_player"
                     android:gravity="center">
@@ -240,6 +237,5 @@
                         android:fontFamily="@font/inter_bold"/>
                 </LinearLayout>
             </GridLayout>
-        </HorizontalScrollView>
-    </androidx.core.widget.NestedScrollView>
+    </ScrollView>
 </androidx.constraintlayout.widget.ConstraintLayout>
