--- a/APPS/reloj/RellotgeJAIS/app/src/main/res/layout/activity_vititant_players.xml
+++ b/APPS/reloj/RellotgeJAIS/app/src/main/res/layout/activity_vititant_players.xml
@@ -35,33 +35,32 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
 
-    <!-- ScrollView para desplazamiento en ambas direcciones -->
-    <androidx.core.widget.NestedScrollView
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        app:layout_constraintTop_toBottomOf="@id/scoreboard"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:fillViewport="true">
 
-        <HorizontalScrollView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:paddingTop="12dp">
+
+
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_marginTop="8dp"
+            android:layout_height="0dp"
+            app:layout_constraintTop_toBottomOf="@id/scoreboard"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent">
 
             <GridLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:columnCount="4"
-                android:paddingHorizontal="100dp"
-                android:paddingVertical="40dp"
-                android:rowCount="4">
+                android:columnCount="3"
+                android:paddingTop="10dp"
+                android:paddingBottom="50dp"
+                android:rowCount="4"
+                android:layout_gravity="center_horizontal"
+                >
 
                 <!-- Ejemplo de LinearLayout con TextView -->
                 <LinearLayout
-                    android:layout_width="40dp"
-                    android:layout_height="40dp"
+                    android:layout_width="60dp"
+                    android:layout_height="60dp"
                     android:layout_margin="6dp"
                     android:background="@drawable/golkeeper"
                     android:gravity="center">
@@ -76,8 +75,8 @@
 
                 <!-- Repite este patrón para cada ImageButton -->
                 <LinearLayout
-                    android:layout_width="40dp"
-                    android:layout_height="40dp"
+                    android:layout_width="60dp"
+                    android:layout_height="60dp"
                     android:layout_margin="6dp"
                     android:background="@drawable/blue_player"
                     android:gravity="center">
@@ -91,8 +90,8 @@
                 </LinearLayout>
 
                 <LinearLayout
-                    android:layout_width="40dp"
-                    android:layout_height="40dp"
+                    android:layout_width="60dp"
+                    android:layout_height="60dp"
                     android:layout_margin="6dp"
                     android:background="@drawable/blue_player"
                     android:gravity="center">
@@ -106,8 +105,8 @@
                 </LinearLayout>
 
                 <LinearLayout
-                    android:layout_width="40dp"
-                    android:layout_height="40dp"
+                    android:layout_width="60dp"
+                    android:layout_height="60dp"
                     android:layout_margin="6dp"
                     android:background="@drawable/blue_player"
                     android:gravity="center">
@@ -121,8 +120,8 @@
                 </LinearLayout>
 
                 <LinearLayout
-                    android:layout_width="40dp"
-                    android:layout_height="40dp"
+                    android:layout_width="60dp"
+                    android:layout_height="60dp"
                     android:layout_margin="6dp"
                     android:background="@drawable/blue_player"
                     android:gravity="center">
@@ -136,8 +135,8 @@
                 </LinearLayout>
 
                 <LinearLayout
-                    android:layout_width="40dp"
-                    android:layout_height="40dp"
+                    android:layout_width="60dp"
+                    android:layout_height="60dp"
                     android:layout_margin="6dp"
                     android:background="@drawable/blue_player"
                     android:gravity="center">
@@ -151,8 +150,8 @@
                 </LinearLayout>
 
                 <LinearLayout
-                    android:layout_width="40dp"
-                    android:layout_height="40dp"
+                    android:layout_width="60dp"
+                    android:layout_height="60dp"
                     android:layout_margin="6dp"
                     android:background="@drawable/blue_player"
                     android:gravity="center">
@@ -166,8 +165,8 @@
                 </LinearLayout>
 
                 <LinearLayout
-                    android:layout_width="40dp"
-                    android:layout_height="40dp"
+                    android:layout_width="60dp"
+                    android:layout_height="60dp"
                     android:layout_margin="6dp"
                     android:background="@drawable/blue_player"
                     android:gravity="center">
@@ -181,8 +180,8 @@
                 </LinearLayout>
 
                 <LinearLayout
-                    android:layout_width="40dp"
-                    android:layout_height="40dp"
+                    android:layout_width="60dp"
+                    android:layout_height="60dp"
                     android:layout_margin="6dp"
                     android:background="@drawable/blue_player"
                     android:gravity="center">
@@ -196,8 +195,8 @@
                 </LinearLayout>
 
                 <LinearLayout
-                    android:layout_width="40dp"
-                    android:layout_height="40dp"
+                    android:layout_width="60dp"
+                    android:layout_height="60dp"
                     android:layout_margin="6dp"
                     android:background="@drawable/blue_player"
                     android:gravity="center">
@@ -211,8 +210,8 @@
                 </LinearLayout>
 
                 <LinearLayout
-                    android:layout_width="40dp"
-                    android:layout_height="40dp"
+                    android:layout_width="60dp"
+                    android:layout_height="60dp"
                     android:layout_margin="6dp"
                     android:background="@drawable/blue_player"
                     android:gravity="center">
@@ -226,8 +225,8 @@
                 </LinearLayout>
 
                 <LinearLayout
-                    android:layout_width="40dp"
-                    android:layout_height="40dp"
+                    android:layout_width="60dp"
+                    android:layout_height="60dp"
                     android:layout_margin="6dp"
                     android:background="@drawable/blue_player"
                     android:gravity="center">
@@ -240,6 +239,5 @@
                         android:fontFamily="@font/inter_bold"/>
                 </LinearLayout>
             </GridLayout>
-        </HorizontalScrollView>
-    </androidx.core.widget.NestedScrollView>
+        </ScrollView>
 </androidx.constraintlayout.widget.ConstraintLayout>
