Modified the endpoints for the clock pairing usecase
Modified the api models to fit the new idea

--- a/APPS/movil/RefereezyApp/app/src/main/res/layout/activity_pairing_clock.xml
+++ b/APPS/movil/RefereezyApp/app/src/main/res/layout/activity_pairing_clock.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     android:clipChildren="false"
     android:clipToPadding="false"
-    tools:context=".PairingClockActivity">
+    tools:context=".screens.PairingClockActivity">
 
 
 
