--- a/APPS/movil/RefereezyApp/app/src/main/res/layout/fragment_score.xml
+++ b/APPS/movil/RefereezyApp/app/src/main/res/layout/fragment_score.xml
@@ -7,7 +7,7 @@
     android:layout_gravity="center_horizontal"
     android:layout_marginTop="32dp"
     android:background="@drawable/scoreboard"
-    tools:context=".ScoreFragment">
+    tools:context=".screens.ScoreFragment">
 
 
     <TextView
