--- a/APPS/movil/RefereezyApp/app/src/main/res/layout/activity_login.xml
+++ b/APPS/movil/RefereezyApp/app/src/main/res/layout/activity_login.xml
@@ -18,20 +18,20 @@
         android:layout_marginTop="80dp"/>
 
     <EditText
+        android:id="@+id/dniField"
         app:layout_constraintTop_toBottomOf="@id/logo"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:id="@+id/mailField"
         android:layout_width="300dp"
         android:layout_height="50dp"
         android:layout_marginTop="70dp"
-        android:hint="Email"/>
+        android:hint="DNI"/>
 
     <EditText
-        app:layout_constraintTop_toBottomOf="@id/mailField"
+        android:id="@+id/passwordField"
+        app:layout_constraintTop_toBottomOf="@id/dniField"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:id="@+id/passwordField"
         android:layout_width="300dp"
         android:layout_height="50dp"
         android:layout_marginTop="20dp"
