--- a/APPS/movil/RefereezyApp/app/src/main/res/layout/activity_login.xml
+++ b/APPS/movil/RefereezyApp/app/src/main/res/layout/activity_login.xml
@@ -10,9 +10,11 @@
     <ImageView
         android:id="@+id/logo"
         android:background="@color/white"
+        android:scaleType="fitCenter"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+
         android:layout_width="300dp"
         android:layout_height="200dp"
         android:layout_marginTop="80dp"/>
