--- a/APPS/movil/RefereezyApp/app/src/main/res/layout/activity_main.xml
+++ b/APPS/movil/RefereezyApp/app/src/main/res/layout/activity_main.xml
@@ -13,6 +13,7 @@
         android:src="@drawable/loading_football"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintVertical_bias=".25"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
@@ -26,19 +27,25 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/splash_logo"
-        android:layout_marginStart="32dp"
-        android:layout_marginEnd="32dp"/>
+        android:layout_marginHorizontal="70dp"/>
 
-    <TextView
-        android:id="@+id/splash_status_text"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Starting"
-        android:textColor="@color/white"
-        android:textSize="18sp"
+    <ScrollView
+        android:id="@+id/splash_status_scroll"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginTop="70dp"
+        android:layout_marginBottom="16dp"
         app:layout_constraintTop_toBottomOf="@id/splash_progress_bar"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="16dp"/>
+        app:layout_constraintBottom_toBottomOf="parent">
+
+        <LinearLayout
+            android:id="@+id/splash_status_container"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingHorizontal="15dp"
+            android:orientation="vertical" />
+    </ScrollView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
