--- a/APPS/movil/RefereezyApp/app/src/main/res/values/colors.xml
+++ b/APPS/movil/RefereezyApp/app/src/main/res/values/colors.xml
@@ -5,6 +5,8 @@
     <color name="transparent">#00000000</color>
     <color name="cardBackground">#181818</color>
     <color tools:overrid="true" name="m3_dark_default_color_secondary_text" >@color/white</color>
+    <color name="light_red">#FF3F3F</color>
+    <color name="red">#FF0000</color>
 
 
 
