--- a/APPS/movil/RefereezyApp/app/src/main/res/values/styles.xml
+++ b/APPS/movil/RefereezyApp/app/src/main/res/values/styles.xml
@@ -4,7 +4,7 @@
     <style name="MatchDayTitle">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="android:layout_marginStart">50dp</item>
+        <item name="android:layout_marginHorizontal">50dp</item>
         <item name="android:layout_marginTop">30dp</item>
         <item name="android:textSize">28sp</item>
         <item name="fontFamily">@font/k2d_medium</item>
@@ -42,6 +42,7 @@
     <style name="TimerTextStyle">
         <item name="android:layout_height">100dp</item>
         <item name="android:layout_marginTop">-10dp</item>
+        <item name="android:layout_marginBottom">10dp</item>
         <item name="android:gravity">center_horizontal</item>
         <item name="android:fontFamily">@font/k2d_medium</item>
         <item name="android:textStyle">bold</item>
