--- a/APPS/movil/RefereezyApp/app/src/main/res/layout/activity_actions.xml
+++ b/APPS/movil/RefereezyApp/app/src/main/res/layout/activity_actions.xml
@@ -7,16 +7,11 @@
     android:layout_height="match_parent"
     tools:context=".screens.ActionsActivity">
 
-    <TextView
+    <Chronometer
         android:id="@+id/timer"
+        style="@style/TimerTextStyle"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_width="match_parent"
-        android:layout_height="100dp"
-        android:text="84:00"
-        android:gravity="center_horizontal"
-        android:fontFamily="@font/k2d_medium"
-        android:textStyle="bold"
-        android:textSize="64sp"/>
+        android:layout_width="match_parent" />
 
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/scoreboard"
@@ -98,6 +93,7 @@
 
     
     <ImageButton
+        android:id="@+id/flipBtn"
         android:layout_margin="15dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
