--- a/APPS/movil/RefereezyApp/app/src/main/res/layout/fragment_score.xml
+++ b/APPS/movil/RefereezyApp/app/src/main/res/layout/fragment_score.xml
@@ -7,7 +7,7 @@
     android:layout_gravity="center_horizontal"
     android:layout_marginTop="32dp"
     android:background="@drawable/scoreboard"
-    tools:context=".screens.ScoreFragment">
+    tools:context=".screens.fragments.ScoreFragment">
 
 
     <TextView
@@ -22,7 +22,7 @@
 
     <ImageView
         android:layout_marginStart="100dp"
-        android:id="@+id/escudoIzquierdo"
+        android:id="@+id/localTeamLogo"
         android:layout_width="55dp"
         android:layout_height="55dp"
         android:layout_gravity="center_vertical"
@@ -30,7 +30,7 @@
         android:src="@drawable/ic_launcher_foreground" />
 
     <ImageView
-        android:id="@+id/escudoDerecho"
+        android:id="@+id/visitorTeamLogo"
         android:layout_width="55dp"
         android:layout_height="55dp"
         android:layout_marginEnd="100dp"
