Implemented a lot of loading data to UI, redirection, etc

--- a/APPS/movil/RefereezyApp/app/src/main/res/layout/activity_pairing_clock.xml
+++ b/APPS/movil/RefereezyApp/app/src/main/res/layout/activity_pairing_clock.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     android:clipChildren="false"
     android:clipToPadding="false"
-    tools:context=".screens.PairingClockActivity">
+    tools:context=".screens.user.PairingClockActivity">
 
 
 
