--- a/APPS/movil/RefereezyApp/app/src/main/res/layout/activity_login.xml
+++ b/APPS/movil/RefereezyApp/app/src/main/res/layout/activity_login.xml
@@ -5,7 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".screens.LoginActivity">
+    tools:context=".screens.user.LoginActivity">
 
     <ImageView
         android:id="@+id/logo"
