--- a/APPS/movil/RefereezyApp/app/src/main/res/layout/activity_match.xml
+++ b/APPS/movil/RefereezyApp/app/src/main/res/layout/activity_match.xml
@@ -5,7 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".screens.MatchActivity">
+    tools:context=".screens.user.MatchActivity">
 
     <FrameLayout
         android:id="@+id/topMenu"
