--- a/APPS/reloj/RellotgeJAIS/app/src/main/res/layout/fragment_scoreboard.xml
+++ b/APPS/reloj/RellotgeJAIS/app/src/main/res/layout/fragment_scoreboard.xml
@@ -3,11 +3,10 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="150dp"
-    android:layout_height="30dp"
+    android:layout_height="wrap_content"
     android:layout_gravity="center_horizontal"
-    android:layout_marginTop="32dp"
     android:background="@drawable/scoreboard"
-    tools:context=".scoreboard">
+    tools:context=".screens.Scoreboard">
 
 
     <TextView
