--- a/APPS/movil/RefereezyApp/app/src/main/res/layout/activity_player_pick.xml
+++ b/APPS/movil/RefereezyApp/app/src/main/res/layout/activity_player_pick.xml
@@ -31,6 +31,7 @@
         android:layout_height="wrap_content">
 
         <androidx.gridlayout.widget.GridLayout
+            android:id="@+id/playerGrid"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="16dp"
@@ -40,49 +41,6 @@
 
             <include layout="@layout/layout_player_pick" />
 
-            <TextView
-                style="@style/NormalButton"
-                android:text="2" />
-
-            <TextView
-                style="@style/NormalButton"
-                android:text="3" />
-
-            <TextView
-                style="@style/NormalButton"
-                android:text="4" />
-
-            <TextView
-                style="@style/NormalButton"
-                android:text="5" />
-
-            <TextView
-                style="@style/NormalButton"
-                android:text="6" />
-
-            <TextView
-                style="@style/NormalButton"
-                android:text="7" />
-
-            <TextView
-                style="@style/NormalButton"
-                android:text="8" />
-
-            <TextView
-                style="@style/NormalButton"
-                android:text="9" />
-
-            <TextView
-                style="@style/SpecialButton"
-                android:text="13" />
-
-            <TextView
-                style="@style/NormalButton"
-                android:text="14" />
-
-            <TextView
-                style="@style/NormalButton"
-                android:text="99" />
         </androidx.gridlayout.widget.GridLayout>
     </ScrollView>
 
