--- a/APPS/movil/RefereezyApp/app/src/main/res/layout/activity_main.xml
+++ b/APPS/movil/RefereezyApp/app/src/main/res/layout/activity_main.xml
@@ -31,6 +31,7 @@
 
     <ScrollView
         android:id="@+id/splash_status_scroll"
+        android:orientation="vertical"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginTop="70dp"
