--- a/APPS/movil/RefereezyApp/app/src/main/res/layout/activity_action.xml
+++ b/APPS/movil/RefereezyApp/app/src/main/res/layout/activity_action.xml
@@ -7,11 +7,14 @@
     android:layout_height="match_parent"
     tools:context=".screens.report.ActionActivity">
 
-    <Chronometer
+    <androidx.fragment.app.FragmentContainerView
         android:id="@+id/timer"
-        style="@style/TimerTextStyle"
+        android:layout_height="wrap_content"
+        tools:layout="@layout/fragment_timer"
+        android:layout_width="match_parent"
+        android:name="com.example.refereezyapp.screens.fragments.TimerFragment"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_width="match_parent" />
+        />
 
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/scoreboard"
