--- a/APPS/movil/RefereezyApp/app/src/main/res/layout/activity_incident.xml
+++ b/APPS/movil/RefereezyApp/app/src/main/res/layout/activity_incident.xml
@@ -87,6 +87,7 @@
     </LinearLayout>
 
     <ImageButton
+        android:id="@+id/flipBtn"
         android:layout_margin="15dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
