--- a/APPS/movil/RefereezyApp/app/src/main/res/layout/activity_incident_list.xml
+++ b/APPS/movil/RefereezyApp/app/src/main/res/layout/activity_incident_list.xml
@@ -26,4 +26,16 @@
         android:layout_marginTop="10dp"
         android:layout_marginBottom="40dp"/>
 
+
+    <ImageButton
+        android:id="@+id/flipBtn"
+        android:layout_margin="15dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:background="@color/transparent"
+        android:src="@drawable/ic_turn"
+        android:layout_width="50dp"
+        android:padding="10dp"
+        android:layout_height="50dp"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
