--- a/APPS/movil/RefereezyApp/app/src/main/res/layout/activity_player_pick.xml
+++ b/APPS/movil/RefereezyApp/app/src/main/res/layout/activity_player_pick.xml
@@ -52,6 +52,7 @@
 
 
     <ImageButton
+        android:id="@+id/flipBtn"
         android:layout_margin="15dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
